Fixed scrollbar bug in FF

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -62,7 +62,7 @@ div#splash-wrapper {
     z-index: 9999;
     
     // Watch out for overflow on this element!
-    overflow-y: scroll;
+    //overflow-y: scroll;
     
     &::-webkit-scrollbar {
         width: 12px;
